Fix media#search results by truncating and nowrap

--- a/app/assets/stylesheets/georgia/media.css.scss
+++ b/app/assets/stylesheets/georgia/media.css.scss
@@ -18,13 +18,3 @@
     form, input {margin: 0;}
   }
 }
-
-.media-link {
-  display: block;
-  width: 160px;
-  height: 120px;
-}
-
-.media-image {
-  width: 100%;
-}
